--- a/info.yaml
+++ b/info.yaml
@@ -23,9 +23,9 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "ui_in[0]"
+  ui[1]: "ui_in[1]"
+  ui[2]: "ui_in[2]"
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
@@ -33,24 +33,24 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "OUT0"
+  uo[1]: "OUT1"
+  uo[2]: "OUT2"
+  uo[3]: "OUT3"
+  uo[4]: "OUT4"
+  uo[5]: "OUT5"
+  uo[6]: "OUT6"
+  uo[7]: "OUT7"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "OUT8"
+  uio[1]: "OUT9"
+  uio[2]: "OUT10"
+  uio[3]: "OUT11"
+  uio[4]: "OUT12"
+  uio[5]: "OUT13"
+  uio[6]: "OUT14"
+  uio[7]: "OUT15"
 
 # Do not change!
 yaml_version: 6
